# Django_blog

./: manage.py  pyproject.toml
blog/: urls.py  views.py
exception_blog/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  landing.html
users/: forms.py  urls.py  views.py
users/templates/users/: landing.html  registr_login.html
